syntax = "proto3";

package example;
option java_package = "com.bcf.statefun4s";
option java_multiple_files = true;

import "scalapb/scalapb.proto";
import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";
import "statefun4s/RequestReply.proto";


message GreeterRpc {
  oneof sealed_value {
    GreeterEntryReq request = 1;
    GreeterResponse response = 2;
  }
}

message GreeterEntryReq {
  string name = 1;
}

message GreeterRequest {
  string name = 1;
  io.statefun.sdk.reqreply.Address reply_to = 2 [(scalapb.field).no_box = true];
}

message GreeterResponse {
  string greeting = 1;
}

message GreeterState {
  int64 num = 1;
}

message BatchFinished {
}

message BatchConfig {
  io.statefun.sdk.reqreply.Address addr = 1;
  google.protobuf.Duration window = 2;
}

message BatchOutput {
  repeated google.protobuf.Any msg = 1;
}

message BatchState {
  google.protobuf.Duration window = 1 [(scalapb.field).no_box = true];
  io.statefun.sdk.reqreply.Address addr = 2 [(scalapb.field).no_box = true];
  repeated google.protobuf.Any msg = 3;
}